--- a/views/singleProduct.ejs
+++ b/views/singleProduct.ejs
@@ -190,7 +190,7 @@
                   </div>
 
                   <a href="<%= product.downloadLink %>" download="<%= product.downloadLink %>.pdf"
-                    ><button class="buton obtn">SPECIFICATION</button></a>
+                    ><button class="buton obtn m-mrg">SPECIFICATION</button></a>
 
 
 
