--- a/views/featured.ejs
+++ b/views/featured.ejs
@@ -53,7 +53,7 @@
             </p>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center featureImg">
-            <img src="assets/img/mcpl_img.jpg" alt="" class="img-fluid">
+            <img src="assets/img/mcpl_img.jpg" alt="mcpl_img" class="img-fluid">
           </div>
         </div>
       </div>
