--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -7,7 +7,7 @@
             
             <a href="https://www.facebook.com/mahidharachemicals" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
 
-            <a href="https://twitter.com/MahidharaChem" ><img class="x-twitter" target="_blank" src="assets/img/twitter-x-icon.png" alt=""></a>
+            <a href="https://twitter.com/MahidharaChem" ><img class="x-twitter" target="_blank" src="assets/img/twitter-x-icon.png" alt="twitter-x"></a>
             <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
             <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
             <a href="https://www.linkedin.com/company/mahidhara-chemicals/about/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
