--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -13,7 +13,7 @@
     </ul>
     <div class="row portfolio-container" data-aos="fade-up">
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-        <div class="portfolio-img"><img src="/assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""></div>
+        <div class="portfolio-img"><img src="/assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="portfolio-1"></div>
         <div class="portfolio-info">
           <h4>App 1</h4>
           <p>App</p>
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-        <div class="portfolio-img"><img src="/assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt=""></div>
+        <div class="portfolio-img"><img src="/assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="portfolio-2"></div>
         <div class="portfolio-info">
           <h4>Web 3</h4>
           <p>Web</p>
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-        <div class="portfolio-img"><img src="/assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt=""></div>
+        <div class="portfolio-img"><img src="/assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="portfolio-3"></div>
         <div class="portfolio-info">
           <h4>App 2</h4>
           <p>App</p>
@@ -44,7 +44,7 @@
       </div>
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-        <div class="portfolio-img"><img src="/assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt=""></div>
+        <div class="portfolio-img"><img src="/assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="portfolio-4"></div>
         <div class="portfolio-info">
           <h4>Card 2</h4>
           <p>Card</p>
@@ -55,7 +55,7 @@
       </div>
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-        <div class="portfolio-img"><img src="/assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt=""></div>
+        <div class="portfolio-img"><img src="/assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="portfolio-5"></div>
         <div class="portfolio-info">
           <h4>Web 2</h4>
           <p>Web</p>
@@ -66,7 +66,7 @@
       </div>
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-        <div class="portfolio-img"><img src="/assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt=""></div>
+        <div class="portfolio-img"><img src="/assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="portfolio-6"></div>
         <div class="portfolio-info">
           <h4>App 3</h4>
           <p>App</p>
@@ -77,7 +77,7 @@
       </div>
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-        <div class="portfolio-img"><img src="/assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt=""></div>
+        <div class="portfolio-img"><img src="/assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="portfolio-7"></div>
         <div class="portfolio-info">
           <h4>Card 1</h4>
           <p>Card</p>
@@ -88,7 +88,7 @@
       </div>
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-        <div class="portfolio-img"><img src="/assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt=""></div>
+        <div class="portfolio-img"><img src="/assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="portfolio-8"></div>
         <div class="portfolio-info">
           <h4>Card 3</h4>
           <p>Card</p>
@@ -99,7 +99,7 @@
       </div>
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-        <div class="portfolio-img"><img src="/assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt=""></div>
+        <div class="portfolio-img"><img src="/assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="portfolio-9"></div>
         <div class="portfolio-info">
           <h4>Web 3</h4>
           <p>Web</p>
