--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -20,15 +20,19 @@
             </div>
 
             <div class="email">
+              <a href="mailto:info@example.com">
               <i class="icofont-envelope"></i>
               <h4>Email:</h4>
               <p>info.mahidhara@gmail.com</p>
+            </a>
             </div>
 
             <div class="phone">
+              <a href="tel:+91 8455240445,+91 8455285904">
               <i class="icofont-phone"></i>
               <h4>Call:</h4>
-              <p>+91 8455 240445, +91 8455 285904</p>
+              <p> +91 8455 240445, +91 8455 285904</p>
+            </a>
             </div>
 
           </div>
