--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -20,7 +20,7 @@
             </div>
 
             <div class="email">
-              <a href="mailto:info@example.com">
+              <a href="mailto:info.mahidhara@gmail.com">
               <i class="icofont-envelope"></i>
               <h4>Email:</h4>
               <p>info.mahidhara@gmail.com</p>
