--- a/views/singleProduct.ejs
+++ b/views/singleProduct.ejs
@@ -89,7 +89,7 @@
             <div class="row">
               <div class="col-12 col-md-6 col-lg-6">
                 <div class="detail_img">
-                  <img class="chemicalImage" src="<%= product.image %>" alt />
+                  <img class="chemicalImage" src="<%= product.image %>" alt="<%= product.displayUrl %>" />
                 </div>
               </div>
               <div class="col-12 col-md-6 col-lg-6 description">
