--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -538,6 +538,11 @@ section {
   overflow: hidden;
 }
 
+.s-product{
+  padding-top: 0px;
+  padding-bottom: 30px;
+}
+
 .section-title {
   padding-bottom: 40px;
 }
@@ -2188,6 +2193,7 @@ width: 90px;
   }
  
 }
+
 
 
 
