--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,9 @@
   <head>
 <%- include('head', {products: products}); -%>
 <link rel="canonical" href="https://mahidhara.com" />
+<title>Mahidhara Chemicals Pvt Ltd - Alkali Metals Manufacturer</title>
+<meta name="description" content=" Alkali Metals Chemical Manufacturer & Supplier - Mahidhara chemicals is one of the leading chemical manufacturing companies in India dealing with various alkali metals." >
+<meta name="keywords" content="mahidhara chemicals, mahidhara chemicals pvt ltd, Top alkali metals manufacturer, Alakli metals supplier Chemical companies in India, Top chemical companies in Hyderabad">
 </head>
 
 <body>
