--- a/views/contactUs.ejs
+++ b/views/contactUs.ejs
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
 <%- include('head'); -%>
+
 <link rel="canonical" href="https://mahidhara.com/contact" />
+<title>Mahidhara Chemicals Pvt Ltd - Contact us for alkali metals</title>
+<meta name="description" content=" We specialise in the manufacture of derivatives of Sodium, Potassium, Lithium, Magnesium Metals and Fine chemicals. We also undertake toll manufacturing. Get quote" />
+<meta name="keywords" content="Organometallic products, Metal Alkoxides, Grignard Reagents and other alkali metal products" />
+
 </head>
 <body>
   <%- include('header', {products: products}); -%>
