--- a/views/singleProduct.ejs
+++ b/views/singleProduct.ejs
@@ -331,6 +331,18 @@
               font-style: oblique;
               text-decoration: underline;
             ">
+              About
+            </h6>
+            <%= product.about %>
+          </div>
+        </section>
+        <section class="s-product">
+          <div class="container" style="max-width: 900px">
+            <h6 style="
+              font-weight: bolder;
+              font-style: oblique;
+              text-decoration: underline;
+            ">
               Packaging
             </h6>
             <%= product.packing %>
