--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2194,6 +2194,27 @@ width: 90px;
  
 }
 
+ .btn-learn-more-aboutUs {
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 12px 32px;
+  border-radius: 5px;
+  transition: 0.3s;
+  line-height: 1;
+  color: #ef6603;
+  -webkit-animation-delay: 0.8s;
+  animation-delay: 0.8s;
+  margin-top: 6px;
+  border: 2px solid #ef6603;
+}
 
+ .btn-learn-more-aboutUs:hover {
+  background: #ef6603;
+  color: #fff;
+  text-decoration: none;
+}
 
 
