--- a/views/head.ejs
+++ b/views/head.ejs
@@ -2,8 +2,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Mahidhara Chemicals Private Limited - Alkali Metals Manufacturer</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  
 
   <!-- Favicons -->
   <link href="assets/img/Mahidhara Favicon.png" rel="icon">
@@ -45,6 +44,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-BCBEH8369D');
+  gtag('config', 'AW-11401998795');
 </script>
 
 <script type="text/javascript">
