--- a/views/singleHead.ejs
+++ b/views/singleHead.ejs
@@ -45,6 +45,7 @@
     gtag('js', new Date());
   
     gtag('config', 'G-BCBEH8369D');
+    gtag('config', 'AW-11401998795');
   </script>
 
 <script type="text/javascript">
