--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
   <%- include('heroSection'); -%>
   <main id="main">
     <%- include('about'); -%>
-    <%- include('featured'); -%>
+    <%- include('indexFeatured'); -%>
     <%- include('callToAction'); -%>
     <%- include('services', {products: products}); -%>
     <!-- <%- include('portfolio'); -%> -->
