--- a/views/about.ejs
+++ b/views/about.ejs
@@ -24,7 +24,7 @@
             Our aim is to manufacture Speciality & Fine chemicals which are of top quality, discovering and innovating technologies.
             We are focused at developing technologies for import substitute products. 
           </p>
-          <a href="#" class="btn-learn-more">Learn More</a>
+          <a href="/aboutUs" class="btn-learn-more">Learn More</a>
         </div>
       </div>
 
