--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,7 +10,7 @@
     <nav class="nav-menu d-none d-lg-block">
       <ul>
         <li class="active"><a href="/">Home</a></li>
-        <li><a href="/#about">About</a></li>
+        <li><a href="/aboutUs">About</a></li>
         <!-- <li><a href="#services">Services</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#pricing">Pricing</a></li>
