--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 
 <body>
   <%- include('header', {products: products}); -%>
-  <%- include('heroSection'); -%>
+  <%- include('heroSection', { heading: 'Welcome to Mahidhara' }); -%>
   <main id="main">
     <%- include('about'); -%>
     <%- include('indexFeatured'); -%>
