--- a/views/heroSection.ejs
+++ b/views/heroSection.ejs
@@ -5,7 +5,7 @@
             <!-- Slide 1 -->
             <div class="carousel-item active">
                 <div class="carousel-container">
-                    <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Mahidhara</span></h2>
+                    <h2 class="animate__animated animate__fadeInDown"><%= heading %></h2>
                     <p class="animate__animated fanimate__adeInUp">We are specialised in the manufacture of derivatives of Sodium, 
                         Potassium, Lithium, Magnesium Metals and Fine chemicals.
                         We also undertake toll manufacturing.
