--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -9,7 +9,7 @@
 
 <body>
   <%- include('header', {products: products}); -%>
-  <%- include('heroSection'); -%>
+  <%- include('heroSection', { heading: 'About Us' }); -%>
   <main id="main">
 
     <%- include('about',{products: products}); -%>
