--- a/views/contactUs.ejs
+++ b/views/contactUs.ejs
@@ -11,7 +11,7 @@
 </head>
 <body>
   <%- include('header', {products: products}); -%>
-  <%- include('heroSection'); -%>
+  <%- include('heroSection', { heading: 'Contact Us' }); -%>
   <main id="main">
     <%- include('contactSites',{products: products}); -%>
 
