--- a/views/contactUs.ejs
+++ b/views/contactUs.ejs
@@ -11,7 +11,7 @@
 </head>
 <body>
   <%- include('header', {products: products}); -%>
-  <%- include('heroSection', { heading: 'Contact Us' }); -%>
+  <%- include('heroSectionPage', { heading: 'Contact Us' , page: 'contact'}); -%>
   <main id="main">
     <%- include('contactSites',{products: products}); -%>
 
