--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -568,6 +568,27 @@ section {
   margin: 4px 10px;
 }
 
+.section-title h1 {
+  font-size: 14px;
+  font-weight: 500;
+  padding: 0;
+  line-height: 1px;
+  margin: 0 0 5px 0;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #aaaaaa;
+  font-family: "Poppins", sans-serif;
+}
+
+.section-title h1::after {
+  content: "";
+  width: 120px;
+  height: 1px;
+  display: inline-block;
+  background: #fd9042;
+  margin: 4px 10px;
+}
+
 .section-title p {
   margin: 0;
   margin: 0;
