--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -4,6 +4,7 @@
         <%- include('head'); -%>
         <link rel="canonical" href="https://mahidhara.com/about" />
         <meta name="description" content="Established in 1997, Mahidhara chemicals has been a manufacturer of derivatives of Sodium, Potassium, Lithium, Magnesium Metals and Fine chemicals for API manufacturers."/>
+        <title>Mahidhara Chemicals Pvt Ltd - About us for alkali metals</title>
         <meta name="keywords" content="Mahidhara Chemicals,Indian top chemical companies,ISO certified chemical company - CIRS certified company" />
     </head>
 
