--- a/views/privacy.ejs
+++ b/views/privacy.ejs
@@ -3,6 +3,8 @@
     <head>
 <%- include('head'); -%>
 <link rel="canonical" href="https://mahidhara.com/privacy" />
+<title>Mahidhara Chemicals Pvt Ltd - Privacy for alkali metals</title>
+
 </head>
 
 <body>
