--- a/views/singleProduct.ejs
+++ b/views/singleProduct.ejs
@@ -343,7 +343,7 @@
               font-style: oblique;
               text-decoration: underline;
             ">
-              Packaging
+              Packing
             </h6>
             <%= product.packing %>
           </div>
